@@ -1,3 +1,12 @@
+Fri Mar 16 12:46:19 GMT 2001 Bernd Schmidt  (bernds@redhat.com)
+
+	* gcc-2.95.3 Released.
+
+2001-01-11  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* sendmsg.c (__objc_print_dtable_stats): Don't use #ifdef inside
+	printf.
+
 2000-03-29  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* objc/Protocol.h, objc/objc-list.h: Change #endif labels to
